Правки по оптимизации

--- a/index.html
+++ b/index.html
@@ -249,6 +249,7 @@
     </div>
   </template>
 
+  <script src = "js/DOM elements.js"></script>
   <script src = "js/utils.js"></script>
   <script src = "js/data.js"></script>
   <script src = "js/pin.js"></script>
