--- a/index.html
+++ b/index.html
@@ -249,8 +249,10 @@
     </div>
   </template>
 
+
   <script src = "js/dom-elements.js"></script>
   <script src = "js/utils.js"></script>
+  <script src = "js/backend.js"></script>
   <script src = "js/data.js"></script>
   <script src = "js/pin.js"></script>
   <script src = "js/form.js"></script>
